# license-updater

./: .gitignore  LICENSE  Makefile  README.md  license_updater.py  pyproject.toml  requirements.txt  test_license_updater.py
examples/: basic_usage.py  sample.csv
license_updater/: __init__.py  __main__.py  cli.py  core.py
tests/: test_license_updater.py
